# brave-core

browser/resources/settings/default_brave_shields_page/: default_brave_shields_page.html
browser/ui/android/strings/translations/: android_brave_strings_de.xtb  android_brave_strings_es.xtb  android_brave_strings_fr.xtb  android_brave_strings_ja.xtb  android_brave_strings_pl.xtb  android_brave_strings_pt-PT.xtb  android_brave_strings_ru.xtb  android_brave_strings_uk.xtb
components/brave_ads/browser/: ads_service.h  ads_service_impl.cc  ads_service_impl.h
components/brave_user_model/browser/: BUILD.gn  region_info.cc  region_info.h  region_util.cc  region_util.h  regions.h  user_model_file_service.cc  user_model_file_service.h
components/services/bat_ads/: bat_ads_client_mojo_bridge.cc  bat_ads_client_mojo_bridge.h
components/services/bat_ads/public/cpp/: ads_client_mojo_bridge.cc  ads_client_mojo_bridge.h
components/services/bat_ads/public/interfaces/: bat_ads.mojom
