source_set("browser") {
  sources = [
    "region_info.cc",
    "region_info.h",
    "region_util.cc",
    "region_util.h",
    "user_model_file_service.cc",
    "user_model_file_service.h",
    "user_model_info.h",
    "user_model_observer.h",
  ]

  deps = [
    "//base",
    "//brave/components/brave_component_updater/browser",
  ]
}
